Added text to the main page and minor template updates

--- a/app/templates/dash_iframe_app.html
+++ b/app/templates/dash_iframe_app.html
@@ -1,4 +1,4 @@
-{% extends "admin/master.html" %}
+{% extends "page.html" %}
 
 {% block body %}
     <iframe src="/dash{{ request.full_path }}" class="fullsize_frame_container" style="width: 1150px; height: 720px;"></iframe>
