--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -3,3 +3,11 @@
 {% block body %}
     <h1>{{ title }}</h1>
 {% endblock %}
+
+{% block tail %}
+    <footer>
+        <nav role="navigation" class="navbar navbar-fixed-bottom">
+            <p class="text-center"><small>Developed by Olga Marchevska (2020)</small></p>
+        </nav>
+    </footer>
+{% endblock %}
