--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,6 +1,31 @@
-{% extends "admin/master.html" %}
+{% extends "page.html" %}
 
 {% block body %}
-    <h1>About ENE Analytics</h1>
+    <h1>ENE Analytics</h1>
+
+    <p>This page is an independent visualization of the data collected by ENE (Encuesta Nacional de Empleo,
+        National Employment Survey) which is conducted in Chile since year 2010 by INE (Instituto Nacional
+        de Estadísticas, National Statistics Institute).
+    </p>
+
+    <p>INE made available raw anonymized data via
+        <a href="https://www.ine.cl/estadisticas/sociales/mercado-laboral/ocupacion-y-desocupacion" target="_blank">Employment
+            and Unemployment (Ocupación y desocupación)</a>, link "Bases de datos", and at the moment of writing
+        the publicly available database contains data for moving quarters from January-March 2010 to
+        February-April of 2020, which captures the beginning of COVID-19 pandemic consequences in Chile.</p>
+
+    <ul>
+        <li><h4>Workforce participation analysis</h4>
+            <ul>
+                <li><a href="/workforce">Workforce participation evolution, split by zone/region, age and gender</a></li>
+            </ul>
+        </li>
+        <li><h4>Unemployment analysis</h4>
+            <ul>
+                <li><a href="/unemployment">Unemployment rate evolution, split by zone/region, age and gender</a></li>
+                <li><a href="/unemployment_by_age">Unemployment rate by age groups, split by zone/region and gender</a></li>
+            </ul>
+        </li>
+    </ul>
 
 {% endblock %}
